Upgrade to Java 18.